# SLAM-Map-Compression-OR-Tools

./: .gitignore  CMakeLists.txt  README.md  build.sh
Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Examples/RGB-D/: rgbd_tum.cc  rgbd_tum_localize.cc  rgbd_tum_savemap.cc
Examples/Stereo/: CameraTrajectory.txt  stereo_euroc.cc  stereo_euroc_localize.cc  stereo_euroc_savemap.cc  stereo_kitti.cc  stereo_kitti_localize.cc  stereo_kitti_savemap.cc
Examples/Tools/: slam_compress_map.cc
include/: LoopClosing.h  Map.h  MapPoint.h  ORBextractor.h  PnPsolver.h  System.h
src/: Converter.cc  LoopClosing.cc  Map.cc  PnPsolver.cc  Tracking.cc
